Dump MappedMemoryManager memory via GLES2Implementation

Due to threading issues, we'd already changed several components
of the GL command buffer to dump their memory heirarchically through
a single registration point in ContextProviderCommandBuffer.

MappedMemoryManager was missed. Modifying it so it doesn't register
to dump directly, but is dumped through ContextProviderCommandBuffer >
GLES2Implementation > MappedMemoryManager.

R=ssid
BUG=675821
CQ_INCLUDE_TRYBOTS=master.tryserver.chromium.linux:linux_optional_gpu_tests_rel;master.tryserver.chromium.mac:mac_optional_gpu_tests_rel;master.tryserver.chromium.win:win_optional_gpu_tests_rel

Review-Url: https://codereview.chromium.org/2592803002
Cr-Commit-Position: refs/heads/master@{#440884}

Former-commit-id: 4f2afdb2933744b91906b3b881aaeaf9b9523deb