gpu/command_buffer/client/mapped_memory.h
@@ -121,8 +121,7 @@ class GPU_EXPORT MemoryChunk {
 };
 
 // Manages MemoryChunks.
-class GPU_EXPORT MappedMemoryManager
-    : public base::trace_event::MemoryDumpProvider {
+class GPU_EXPORT MappedMemoryManager {
  public:
   enum MemoryLimit {
     kNoLimit = 0,
@@ -133,7 +132,7 @@ class GPU_EXPORT MappedMemoryManager
   MappedMemoryManager(CommandBufferHelper* helper,
                       size_t unused_memory_reclaim_limit);
 
-  ~MappedMemoryManager() override;
+  ~MappedMemoryManager();
 
   unsigned int chunk_size_multiple() const {
     return chunk_size_multiple_;
@@ -179,9 +178,9 @@ class GPU_EXPORT MappedMemoryManager
   // Free Any Shared memory that is not in use.
   void FreeUnused();
 
-  // Overridden from base::trace_event::MemoryDumpProvider:
+  // Dump memory usage - called from GLES2Implementation.
   bool OnMemoryDump(const base::trace_event::MemoryDumpArgs& args,
-                    base::trace_event::ProcessMemoryDump* pmd) override;
+                    base::trace_event::ProcessMemoryDump* pmd);
 
   // Used for testing
   size_t num_chunks() const {
